@startuml

' STATIC
' Generated by CTP - https://github.com/samuelroland/ctp

' Style
hide empty members
skinparam classAttributeIconSize 0
scale 2
' Additions
CTP .down.> PostMix: uses >
CTP .> Converter: calls >
' REMOVE

' ENDSTATIC
abstract class Converter {
	- lang: String
	+ {static} FILE_INSERT: String
	+ {static} FOLDER_INSERT: String
	- {static} defaultStyle: String
	+ {abstract}args(): String[]
	+ defaultPumlStyle(): String
	+ lang(): String
	+ getTransformedArgs(path: String, filename: String): String[]
	+ convert(path: String, outfile: String): boolean
}


class PostMix {
	~ {static} DEFAULT_STYLE: String[]
	+ {static} run(outfile: String, defaultStyle: String): void
	+ {static} pushStaticSection(schema: String, sectionToPush: String): String
	+ {static} doesContainStaticSection(schema: String): boolean
	+ {static} extractStaticSection(schema: String): String
	+ {static} removePatterns(tmp: String, staticSection: String): String
}


class Util {
	+ {static} PUML_EXT: String
	+ {static} TMP_EXT: String
	- {static} HELP: String
	- {static} MANUAL_STEPS_SUGGEST: String
	+ {static} STATIC_START: String
	+ {static} STATIC_END: String
	+ {static} STATIC_REMOVE_KW: String
	+ {static} STATIC_REPLACE_KW: String
	+ {static} START_MARKER_PUML: String
	+ {static} AUTO_GENERATED_TEXT: String
	+ {static} getDefaultContentWithDefaultStyle(defaultStyle: String): String
	+ {static} showHelp(): void
	+ {static} showManualStepsSuggestion(): void
	+ {static} readEntireStream(stream: InputStream): String
	+ {static} readEntireFile(path: String): String
	+ {static} writeEntireFile(path: String, content: String): void
	+ {static} deleteFile(path: String): void
	+ {static} fileExist(path: String): boolean
	+ {static} fail(error: String): void
	+ {static} print(msg: Object): void
}


class JavaConvertor {
	- {static} args: String[]
	+ args(): String[]
}


class CTP {
	+ {static} main(args: String[]): void
}

class CppConvertor {
	- {static} args: String[]
	+ args(): String[]
}




Converter <|-- JavaConvertor
Converter <|-- CppConvertor
@enduml
